--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.11.0
-  firebase_database: ^10.1.2
-  table_calendar: ^3.0.9
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +38,9 @@ dependencies:
   firebase_app_installations: ^0.2.2+2
   firebase_database: ^10.1.2
   firebase_auth: ^4.5.0
+  table_calendar: ^3.0.8
+  date_time_picker: ^2.1.0
+  flutter_localization: ^0.1.11
 
 dev_dependencies:
   flutter_test:
