--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,62 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.1
+  flutter_secure_storage: ^5.0.2
+  auto_size_text: 3.0.0
+  cached_network_image: 3.2.1
+  dropdown_button2: 2.0.0
+  easy_debounce: 2.0.1
+  file_picker: 5.2.6
+  fl_chart: 0.55.0
+  flutter_animate: 4.1.1+1
+  flutter_cache_manager: 3.3.0
+  flutter_plugin_android_lifecycle: 2.0.9
+  flutter_spinkit: 5.1.0
+  font_awesome_flutter: 10.1.0
+  from_css_color: 2.0.0
+  google_fonts: 4.0.3
+  google_sign_in: 6.0.2
+  google_sign_in_android: 6.1.8
+  google_sign_in_ios: 5.6.1
+  google_sign_in_platform_interface: 2.4.0
+  google_sign_in_web: 0.11.0+2
+  image_picker: 0.8.5+3
+  image_picker_android: 0.8.5+3
+  image_picker_for_web: 2.1.10
+  image_picker_ios: 0.8.6+1
+  image_picker_platform_interface: 2.6.2
+  intl: 0.17.0
+  json_path: 0.4.1
+  mime_type: 1.0.0
+  page_transition: 2.0.4
+  path_provider: 2.0.14
+  path_provider_android: 2.0.25
+  path_provider_foundation: 2.2.2
+  path_provider_platform_interface: 2.0.6
+  percent_indicator: 4.2.2
+  plugin_platform_interface: 2.1.3
+  rxdart: 0.27.7
+  shared_preferences: 2.0.15
+  shared_preferences_android: 2.1.0
+  shared_preferences_ios: 2.1.1
+  shared_preferences_platform_interface: 2.2.0
+  shared_preferences_web: 2.1.0
+  sign_in_with_apple: 4.3.0
+  sign_in_with_apple_platform_interface: 1.0.0
+  sign_in_with_apple_web: 1.0.1
+  smooth_page_indicator: 1.0.1
+  stream_transform: 2.1.0
+  timeago: 3.2.2
+  url_launcher: 6.1.10
+  url_launcher_android: 6.0.27
+  url_launcher_ios: 6.1.4
+  url_launcher_platform_interface: 2.1.2
+  video_player: 2.6.0
+  video_player_android: 2.4.3
+  video_player_avfoundation: 2.4.2
+  video_player_platform_interface: 6.1.0
+  video_player_web: 2.0.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,9 +94,10 @@ dependencies:
   firebase_app_installations: ^0.2.2+2
   firebase_database: ^10.1.2
   firebase_auth: ^4.5.0
+  cloud_firestore: ^4.7.1
   table_calendar: ^3.0.8
   date_time_picker: ^2.1.0
-  flutter_localization: ^0.1.11
+  flutter_localization: 
 
 dev_dependencies:
   flutter_test:
