--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   video_player_avfoundation: ^2.4.6
   video_player_platform_interface: 6.1.0
   video_player_web: ^2.0.16
+  line_icons: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -100,6 +101,7 @@ dependencies:
   table_calendar: ^3.0.8
   date_time_picker: ^2.1.0
   flutter_localization: 
+  calendar_date_picker2: ^0.4.0
 
 dev_dependencies:
   flutter_test:
