--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,8 +100,9 @@ dependencies:
   cloud_firestore: ^4.7.1
   table_calendar: ^3.0.8
   date_time_picker: ^2.1.0
-  flutter_localization: 
+  # flutter_localization: 
   calendar_date_picker2: ^0.4.0
+  dcdg: ^4.1.0
 
 dev_dependencies:
   flutter_test:
